crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__attribute__tests__derive_union.snap
---
source: crates/nash-parse/src/declaration/attribute.rs
assertion_line: 105
description: "@derive(Eq, Show)\ntype T = A | B"
---
Union(
    Located {
        region: Region {
            start: Position {
                line: 2,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 15,
            },
        },
        value: Union {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 6,
                    },
                    end: Position {
                        line: 2,
                        column: 7,
                    },
                },
                value: "T",
            },
            arguments: [],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 10,
                            },
                            end: Position {
                                line: 2,
                                column: 11,
                            },
                        },
                        value: "A",
                    },
                    arguments: Positional(
                        [],
                    ),
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 14,
                            },
                            end: Position {
                                line: 2,
                                column: 15,
                            },
                        },
                        value: "B",
                    },
                    arguments: Positional(
                        [],
                    ),
                },
            ],
            attributes: [
                Attribute {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                        value: "derive",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 9,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: Var {
                                kind: CapVar,
                                name: "Eq",
                            },
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 13,
                                },
                                end: Position {
                                    line: 1,
                                    column: 17,
                                },
                            },
                            value: Var {
                                kind: CapVar,
                                name: "Show",
                            },
                        },
                    ],
                },
            ],
        },
    },
)
