crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__attribute__tests__error_same_line.snap
---
source: crates/nash-parse/src/declaration/attribute.rs
description: "@derive(Eq) type T = A"
info: diagnostic
---
nash::syntax

  × Attributes must occupy their own lines.
   ╭─[src/Main.nash:1:13]
 1 │ @derive(Eq) type T = A
   ·             ─
   ╰────
  help: Move the following attribute or declaration to a new line.
