crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__attribute__tests__error_unclosed.snap
---
source: crates/nash-parse/src/declaration/attribute.rs
description: "@derive(Eq\ntype T = A"
---
Attribute(
    IndentEnd(
        Position {
            line: 1,
            column: 8,
        },
        1,
        11,
    ),
    1,
    1,
)
