crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__attribute__tests__error_upper_name.snap
---
source: crates/nash-parse/src/declaration/attribute.rs
description: "@Derive(Eq)\ntype T = A"
---
Attribute(
    Name(
        1,
        2,
    ),
    1,
    1,
)
