crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__attribute__tests__inline_value.snap
---
source: crates/nash-parse/src/declaration/attribute.rs
assertion_line: 109
description: "@inline\nf x = x"
---
Value(
    Located {
        region: Region {
            start: Position {
                line: 2,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 8,
            },
        },
        value: Value {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 1,
                    },
                    end: Position {
                        line: 2,
                        column: 2,
                    },
                },
                value: "f",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 3,
                        },
                        end: Position {
                            line: 2,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 7,
                    },
                    end: Position {
                        line: 2,
                        column: 8,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "x",
                },
            },
            annotation: None,
            attributes: [
                Attribute {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                        value: "inline",
                    },
                    args: [],
                },
            ],
        },
    },
)
